Navigation fix overflow

--- a/src/app/core/components/navigation/navigation-route/navigation-route.component.scss
+++ b/src/app/core/components/navigation/navigation-route/navigation-route.component.scss
@@ -119,4 +119,5 @@
   background-color: $nav-hover-color;
   z-index: -1;
   border-radius: 3px;
+  transition: all 0.3s ease-in-out;
 }
